--- a/configurations/TOI4504/TOI-4504_X049.ini
+++ b/configurations/TOI4504/TOI-4504_X049.ini
@@ -65,6 +65,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
+guifit = True                # Find the best fitting parameters by hand
 lmfit = True                 # True for LMfit, False for MCMC
 lmfit_method = powell
 ;lmfit_method = differential_evolution
