--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -23,18 +23,18 @@ rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
 result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
-result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
+result_dt = 1.5e5            # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
-comment = debug               # You can use this comment for example as diagram title in your result plots
+comment = X049               # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 5e5                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 1.5e6                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -65,8 +65,11 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
+guifit = True                # Find the best fitting parameters by hand
 lmfit = True                 # True for LMfit, False for MCMC
 lmfit_method = powell
+;lmfit_method = differential_evolution
+;lmfit_method = nelder
 ;guifit = True                # True for interactive fit via GUI, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
@@ -81,20 +84,20 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-;backend = emcee_backend.h5
+backend = X049_backend.h5
 ;load_backend = True
-walkers = 7              # Number of mcmc chains
-burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 2048               # Number of mcmc chains
+burn_in = 500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 
 ;moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
-moves =  (emcee.moves.StretchMove(a=2.0)     )
+;moves =  (emcee.moves.StretchMove(a=2.0)     )
 ;moves =  (emcee.moves.KDEMove()              )
 ;moves =  (emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2)
 ;moves =  (emcee.moves.StretchMove()     , 0.6), (emcee.moves.DEMove       (), 0.4)
 ;moves =  (emcee.moves.DEMove     ()     , 0.8), (emcee.moves.DESnookerMove(), 0.2)
 ;moves = [(emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2), (emcee.moves.StretchMove(a=2.0), 0.2)]
-;moves = [(emcee.moves.DEMove     ()     , 0.5), (emcee.moves.DESnookerMove(), 0.3), (emcee.moves.WalkMove(), 0.2)]
+moves = [(emcee.moves.DEMove     ()     , 0.5), (emcee.moves.DESnookerMove(), 0.3), (emcee.moves.WalkMove(), 0.2)]
 ;moves =  (emcee.moves.StretchMove()           ,  emcee.moves.WalkMove()           ,  emcee.moves.DEMove())
 # DEMove: 50% langsamer als StretchMove
 # DESnookerMove: superschnell, ineffektiv?
@@ -104,8 +107,8 @@ moves =  (emcee.moves.StretchMove(a=2.0)     )
 # KDEMove: Use MANY walkers!
 # GaussianMove: braucht covarianz als Argument?!?!
 
-thin_samples = 1             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 2               # Every chunk_size steps after burn-in phase, results will be saved.
+thin_samples = 10             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 200           # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -185,14 +188,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,   # 0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
+mass =      1.4166 * m_jup,     0.5 * m_jup,      4.0 * m_jup,       1.5 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,           # 0.0,              0.3,               0.1
+e =         0.0445,             0.0,              0.3,               0.1
 i =         89.0,             # 88.0,             89.5,              0.5
-P =         41.0 * day,       # 39.0 * day,       43.0 * day,        0.75 * day
-Omega =     0,                # -15,              15,                4
-omega =     93,               # 0,                359.99,            120
-ma =        -80,              # -180,             180,               120
+P =         41.0 * day,         39.0 * day,       43.0 * day,        0.75 * day
+Omega =     0,                  -3,               6,                 4
+omega =     93,                 0,                359.99,            120
+ma =        -80,                -180,             180,               120
 
 
 [TOI4504c]
@@ -200,14 +203,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,   # 0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
+mass =      3.7672 * m_jup,     1.0 * m_jup,      5.5 * m_jup,      1.5 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,           # 0.0,              0.30,              0.1
+e =         0.0320,             0.0,              0.30,              0.1
 i =         89.79,            # 89.25,            90.0,              0.2
-P =         82.0 * day,       # 81.0 * day,       86.0 * day,        1.5 * day
+P =         82.0 * day,         81.0 * day,       86.0 * day,        1.5 * day
 Omega =     0.8,              # -15,              15,                4
-omega =     271,              # 0,                359.99,            120
-ma =        173,              # 0,                359.99,            120
+omega =     271,                0,                359.99,            120
+ma =        173,                0,                359.99,            120
 
 ;[TOI4504e]
 ;body_type = planet
