--- a/configurations/TOI4504/TOI-4504_X049.ini
+++ b/configurations/TOI4504/TOI-4504_X049.ini
@@ -23,18 +23,18 @@ rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
 result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
-result_dt = 1.5e5            # Real time differences between simulation iterations when calculating transit times.
+result_dt = 10000            # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = X049               # You can use this comment for example as diagram title in your result plots
-;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 1.5e6                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 200000                  # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -42,7 +42,7 @@ dt = 1.5e6                   # [s] <float> real time difference between simulati
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [1.5e6]             # [s] <float> real time differences between simulation iterations inside each intervall
+dts =    [200000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
