--- a/configurations/TOI4504/TOI-4504_X049.ini
+++ b/configurations/TOI4504/TOI-4504_X049.ini
@@ -29,7 +29,7 @@ max_interval_extensions = 5  # In unstable systems or when using a very large dt
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = X049               # You can use this comment for example as diagram title in your result plots
-verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
