--- a/configurations/TOI4504/TOI-4504_X050.ini
+++ b/configurations/TOI4504/TOI-4504_X050.ini
@@ -160,7 +160,9 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
-mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
+#           value               lower bound       upper bound        sigma
+mass = 930 * m_jup,             860 * m_jup,      999 * m_jup,       100 * m_jup
+;mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
 limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
@@ -188,11 +190,11 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     0.5 * m_jup,      4.0 * m_jup,       1.5 * m_jup
+mass =      1.4166 * m_jup,     1.0 * m_jup,      3.0 * m_jup,       1.5 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,             0.0,              0.3,               0.1
+e =         0.0445,             0.13,             0.27,               0.1
 i =         89.0,             # 88.0,             89.5,              0.5
-P =         41.5 * day,         41.0 * day,       42.15 * day,       0.75 * day
+P =         41.5 * day,         41.3 * day,       41.9 * day,        0.75 * day
 Omega =     0,                  -3,               6,                 4
 omega =     93,                 0,                359.99,            120
 ma =        -80,                -180,             180,               120
@@ -203,11 +205,11 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     1.0 * m_jup,      5.5 * m_jup,      1.5 * m_jup
+mass =      3.7672 * m_jup,     1.0 * m_jup,      3.5 * m_jup,       1.5 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.30,              0.1
+e =         0.0320,             0.0,              0.10,              0.1
 i =         89.79,            # 89.25,            90.0,              0.2
-P =         82.0 * day,         81.0 * day,       83.9 * day,        1.5 * day
+P =         82.0 * day,         81.0 * day,       82.6 * day,        1.5 * day
 Omega =     0.8,              # -15,              15,                4
 omega =     271,                0,                359.99,            120
 ma =        173,                0,                359.99,            120
