--- a/configurations/TOI4504/TOI-4504_X051.ini
+++ b/configurations/TOI4504/TOI-4504_X051.ini
@@ -28,7 +28,7 @@ result_dt = 10000            # Real time differences between simulation iteratio
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
-comment = X049               # You can use this comment for example as diagram title in your result plots
+comment = X051               # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
@@ -66,7 +66,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 ;guifit = True                # Find the best fitting parameters by hand
-lmfit = True                 # True for LMfit, False for MCMC
+;lmfit = True                 # True for LMfit, False for MCMC
 lmfit_method = powell
 ;lmfit_method = differential_evolution
 ;lmfit_method = nelder
@@ -84,20 +84,20 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-backend = X049_backend.h5
+backend = X051_backend.h5
 ;load_backend = True
-walkers = 2048               # Number of mcmc chains
-burn_in = 500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-steps = 1e7                  # Number of mcmc steps after burn-in phase
+walkers = 2048             # Number of mcmc chains
+burn_in = 1                # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+steps = 1e7                # Number of mcmc steps after burn-in phase
 
-;moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
+moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
 ;moves =  (emcee.moves.StretchMove(a=2.0)     )
 ;moves =  (emcee.moves.KDEMove()              )
 ;moves =  (emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2)
 ;moves =  (emcee.moves.StretchMove()     , 0.6), (emcee.moves.DEMove       (), 0.4)
 ;moves =  (emcee.moves.DEMove     ()     , 0.8), (emcee.moves.DESnookerMove(), 0.2)
 ;moves = [(emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2), (emcee.moves.StretchMove(a=2.0), 0.2)]
-moves = [(emcee.moves.DEMove     ()     , 0.5), (emcee.moves.DESnookerMove(), 0.3), (emcee.moves.WalkMove(), 0.2)]
+;moves = [(emcee.moves.DEMove     ()     , 0.5), (emcee.moves.DESnookerMove(), 0.3), (emcee.moves.WalkMove(), 0.2)]
 ;moves =  (emcee.moves.StretchMove()           ,  emcee.moves.WalkMove()           ,  emcee.moves.DEMove())
 # DEMove: 50% langsamer als StretchMove
 # DESnookerMove: superschnell, ineffektiv?
@@ -107,8 +107,8 @@ moves = [(emcee.moves.DEMove     ()     , 0.5), (emcee.moves.DESnookerMove(), 0.
 # KDEMove: Use MANY walkers!
 # GaussianMove: braucht covarianz als Argument?!?!
 
-thin_samples = 10             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 200           # Every chunk_size steps after burn-in phase, results will be saved.
+thin_samples = 1             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 10           # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -161,7 +161,7 @@ body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
 #           value               lower bound       upper bound        sigma
-mass = 930 * m_jup,             860 * m_jup,      999 * m_jup,       100 * m_jup
+mass = 968.926 * m_jup,         860 * m_jup,      999 * m_jup,       1 * m_jup
 ;mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
@@ -190,14 +190,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     1.2 * m_jup,      3.3 * m_jup,       1.5 * m_jup
+mass =      2.7520 * m_jup,     1.2 * m_jup,      3.3 * m_jup,       0.1 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,             0.13,             0.30,              0.1
+e =         0.2114,             0.13,             0.30,              0.01
 i =         89.0,             # 88.0,             89.5,              0.5
-P =         41.6 * day,         41.50 * day,      41.80 * day,       0.75 * day
-Omega =     0,                  -3,               6,                 4
-omega =     93,                 0,                359.99,            120
-ma =        -80,                -180,             180,               120
+P =         41.53 * day,        41.0 * day,       42.0 * day,        0.1 * day
+Omega =     5.6280,             -3,               7,                 0.1
+omega =     318,                298,              338,               5
+ma =        -113.14,           -133,              -93,               5
 
 
 [TOI4504c]
@@ -205,14 +205,15 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     2.0 * m_jup,      3.2 * m_jup,       1.5 * m_jup
+mass =      2.8741 * m_jup,     2.0 * m_jup,      3.2 * m_jup,       0.1 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.10,              0.1
+e =         0.0179,             0.0,              0.10,              0.01
 i =         89.79,            # 89.25,            90.0,              0.2
-P =         81.6 * day,         81.00 * day,      81.70 * day,       1.5 * day
-Omega =     0.8,              # -15,              15,                4
-omega =     271,                0,                359.99,            120
-ma =        173,                0,                359.99,            120
+P =         81.61 * day,        81.00 * day,      82.00 * day,       0.1 * day
+Omega =     0.8,              # -15,              15,                0.1
+omega =     15,                 -5,               35,                5
+ma =        67,                 47,               87,                5
+
 
 ;[TOI4504e]
 ;body_type = planet
