--- a/configurations/TOI4504/TOI-4504_X052.ini
+++ b/configurations/TOI4504/TOI-4504_X052.ini
@@ -28,7 +28,7 @@ result_dt = 10000            # Real time differences between simulation iteratio
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
-comment = X051               # You can use this comment for example as diagram title in your result plots
+comment = X052               # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
@@ -84,8 +84,8 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-backend = X051_backend.h5
-load_backend = True
+backend = X052_backend.h5
+;load_backend = True
 walkers = 2048             # Number of mcmc chains
 burn_in = 1#500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                # Number of mcmc steps after burn-in phase
