--- a/configurations/TOI4504/TOI-4504_X052.ini
+++ b/configurations/TOI4504/TOI-4504_X052.ini
@@ -87,7 +87,7 @@ fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the
 backend = X052_backend.h5
 ;load_backend = True
 walkers = 2048             # Number of mcmc chains
-burn_in = 1#500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+burn_in = 500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
