--- a/configurations/TOI4504/TOI-4504_X053.ini
+++ b/configurations/TOI4504/TOI-4504_X053.ini
@@ -86,8 +86,8 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
 backend = X052_backend.h5
 ;load_backend = True
-walkers = 32#2048             # Number of mcmc chains
-burn_in = 20#500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 2048             # Number of mcmc chains
+burn_in = 500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
@@ -108,7 +108,7 @@ moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses
 # GaussianMove: braucht covarianz als Argument?!?!
 
 thin_samples = 1             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 25#500           # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 500           # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
