--- a/configurations/TOI4504/TOI-4504_X050.ini
+++ b/configurations/TOI4504/TOI-4504_X050.ini
@@ -161,7 +161,7 @@ body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
 #           value               lower bound       upper bound        sigma
-mass = 930 * m_jup,             860 * m_jup,      999 * m_jup,       100 * m_jup
+mass = 950 * m_jup,             850 * m_jup,      1070 * m_jup,       100 * m_jup
 ;mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
@@ -190,14 +190,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     1.2 * m_jup,      3.3 * m_jup,       1.5 * m_jup
+mass =      2.55 * m_jup,       2.3 * m_jup,      2.8 * m_jup,       0.4 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,             0.13,             0.30,              0.1
+e =         0.225,              0.18,             0.27,              0.1
 i =         89.0,             # 88.0,             89.5,              0.5
-P =         41.6 * day,         41.50 * day,      41.80 * day,       0.75 * day
-Omega =     0,                  -3,               6,                 4
-omega =     93,                 0,                359.99,            120
-ma =        -80,                -180,             180,               120
+P =         41.60 * day,        41.5 * day,       41.7 * day,        0.2 * day
+Omega =     2,                  -3,               7,                 3
+omega =     307,                284,              330,               25
+ma =        -85,                -130,             -40,               50
 
 
 [TOI4504c]
@@ -205,14 +205,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     2.0 * m_jup,      3.2 * m_jup,       1.5 * m_jup
+mass =      2.77 * m_jup,       2.55 * m_jup,     3.0 * m_jup,       0.4 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.10,              0.1
+e =         0.02,               0.0,              0.04,              0.02
 i =         89.79,            # 89.25,            90.0,              0.2
-P =         81.6 * day,         81.00 * day,      81.70 * day,       1.5 * day
-Omega =     0.8,              # -15,              15,                4
-omega =     271,                0,                359.99,            120
-ma =        173,                0,                359.99,            120
+P =         81.35 * day,        81.00 * day,      81.70 * day,       0.5 * day
+Omega =     0.8,              #
+omega =     -12,                -55,              30,                50
+ma =        93,                 51,               136,               50
 
 ;[TOI4504e]
 ;body_type = planet
