--- a/configurations/TOI4504/TOI-4504_Vitkova.ini
+++ b/configurations/TOI4504/TOI-4504_Vitkova.ini
@@ -22,8 +22,8 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504_Vitkova.json  # <string> simulation results like transit times are saved in this file
-result_dt = 10000            # Real time differences between simulation iterations when calculating transit times.
+result_file = ../results/TOI-4504_VitkovaMaxL_dt50000_50000_50000.json  # <string> simulation results like transit times are saved in this file
+result_dt = 50000            # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
@@ -34,7 +34,7 @@ verbose = True              # If False (which is default), only error messages w
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 200000                  # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 50000                  # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -42,7 +42,7 @@ dt = 200000                  # [s] <float> real time difference between simulati
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [200000]             # [s] <float> real time differences between simulation iterations inside each intervall
+dts =    [50000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -201,16 +201,19 @@ color =     0.99, 0.99, 0.01
 ;radius =    0.9897 * r_jup
 ;e =         0.0320
 ;i =         89.69
-;P =         82.5438 * day  ???
-;Omega =     0.8
+;P =         82.5438 * day
+;Omega =     0
 ;omega =     270.9
 ;ma =        173.1
 # Vitkova Table 4 MaxL
-;mass =      3.7672 * m_jup
-;radius =    0.9897 * r_jup
-;e =         0.0320
-;i =         89.69
-;P =         82.5438 * day  ???
-;Omega =     0.8
-;omega =     270.9
-;ma =        173.1
+mass =      3.7494 * m_jup
+radius =    0.9897 * r_jup
+e =         0.0320
+i =         89.68
+P =         82.5383 * day
+Omega =     -0.8
+omega =     268.4
+ma =        175.4
+
+
+
