--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -23,7 +23,7 @@ rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
 result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
-result_dt = 1.5e5            # Real time differences between simulation iterations when calculating transit times.
+result_dt = 75000            # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
@@ -34,7 +34,7 @@ comment = debug               # You can use this comment for example as diagram 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 1.5e6                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 75000                  # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -42,7 +42,7 @@ dt = 1.5e6                   # [s] <float> real time difference between simulati
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [1.5e6]             # [s] <float> real time differences between simulation iterations inside each intervall
+dts =    [75000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -65,8 +65,8 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
-guifit = True                # Find the best fitting parameters by hand
-lmfit = True                 # True for LMfit, False for MCMC
+;guifit = True                # Find the best fitting parameters by hand
+;lmfit = True                 # True for LMfit, False for MCMC
 lmfit_method = powell
 ;lmfit_method = differential_evolution
 ;lmfit_method = nelder
@@ -84,20 +84,20 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-backend = X049_backend.h5
+;backend = X055_backend.h5
 ;load_backend = True
-walkers = 2048               # Number of mcmc chains
-burn_in = 500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-steps = 1e7                  # Number of mcmc steps after burn-in phase
+walkers = 32             # Number of mcmc chains
+burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+steps = 1e7                # Number of mcmc steps after burn-in phase
 
-;moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
+moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
 ;moves =  (emcee.moves.StretchMove(a=2.0)     )
 ;moves =  (emcee.moves.KDEMove()              )
 ;moves =  (emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2)
 ;moves =  (emcee.moves.StretchMove()     , 0.6), (emcee.moves.DEMove       (), 0.4)
 ;moves =  (emcee.moves.DEMove     ()     , 0.8), (emcee.moves.DESnookerMove(), 0.2)
 ;moves = [(emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2), (emcee.moves.StretchMove(a=2.0), 0.2)]
-moves = [(emcee.moves.DEMove     ()     , 0.5), (emcee.moves.DESnookerMove(), 0.3), (emcee.moves.WalkMove(), 0.2)]
+;moves = [(emcee.moves.DEMove     ()     , 0.5), (emcee.moves.DESnookerMove(), 0.3), (emcee.moves.WalkMove(), 0.2)]
 ;moves =  (emcee.moves.StretchMove()           ,  emcee.moves.WalkMove()           ,  emcee.moves.DEMove())
 # DEMove: 50% langsamer als StretchMove
 # DESnookerMove: superschnell, ineffektiv?
@@ -107,8 +107,8 @@ moves = [(emcee.moves.DEMove     ()     , 0.5), (emcee.moves.DESnookerMove(), 0.
 # KDEMove: Use MANY walkers!
 # GaussianMove: braucht covarianz als Argument?!?!
 
-thin_samples = 10             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 200           # Every chunk_size steps after burn-in phase, results will be saved.
+thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 10             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -160,7 +160,9 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
-mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
+#           value               lower bound       upper bound        sigma
+mass = 927.12 * m_jup,          #850 * m_jup,      1070 * m_jup,       100 * m_jup
+;mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
 limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
@@ -188,14 +190,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     0.5 * m_jup,      4.0 * m_jup,       1.5 * m_jup
+mass =      2.269 * m_jup,      1.0 * m_jup,      5.0 * m_jup,       0.001 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,             0.0,              0.3,               0.1
+e =         0.239,              0.00,             0.50,              0.00001
 i =         89.0,             # 88.0,             89.5,              0.5
-P =         41.0 * day,         39.0 * day,       43.0 * day,        0.75 * day
-Omega =     0,                  -3,               6,                 4
-omega =     93,                 0,                359.99,            120
-ma =        -80,                -180,             180,               120
+P =         41.731 * day,       40.0 * day,       43.0 * day,        0.001 * day
+Omega =     0.8,                -10,              10,                0.01
+omega =     286.9,              100,              460,               0.01
+ma =        -44.2,              -220,             140,               0.01
 
 
 [TOI4504c]
@@ -203,14 +205,15 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     1.0 * m_jup,      5.5 * m_jup,      1.5 * m_jup
+mass =      2.672 * m_jup,      1.0 * m_jup,      5.0 * m_jup,       0.001 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.30,              0.1
+e =         0.0334,             0.00,             0.50,              0.00001
 i =         89.79,            # 89.25,            90.0,              0.2
-P =         82.0 * day,         81.0 * day,       86.0 * day,        1.5 * day
-Omega =     0.8,              # -15,              15,                4
-omega =     271,                0,                359.99,            120
-ma =        173,                0,                359.99,            120
+P =         80.91 * day,        80.00 * day,      86.00 * day,       0.001 * day
+Omega =     0.8,              #
+omega =     -53.3,              -230,             130,               0.01
+ma =        134.7,              -50,              310,               0.01
+
 
 ;[TOI4504e]
 ;body_type = planet
